# footlights

./: Cargo.toml  readme.md
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: main.rs
engine/: Cargo.toml
engine/src/: background.rs  configs.rs  foundation.rs  image.rs  lib.rs  shape.rs  svg.rs  tests.rs
examples/: basic.yaml  basic_2.yml  templates.yaml
fl-demo/: package-lock.json  package.json
fl-demo/src/: App.js
src/: adt.rs  layers.rs  main.rs  svg_render.rs
src/adt/: background.rs  image.rs  mod.rs  svg.rs  tests.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
