[package]
name = "footlights"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
elementtree = "1.2.3"
image = "0.24.5"
imagesize = "0.11.0"
resvg = "0.28.0"
serde = {version = "1.0.152", features = ["derive"]}
serde_yaml = "0.9.16"
typetag = "0.2"
